--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ gunicorn==20.1.0
 idna==2.10
 oauthlib==3.1.1
 Pillow==8.2.0
+psycopg2-binary==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
 pykerberos==1.2.1
